fixed alignment issue in the mobile title view

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -111,6 +111,12 @@
 			display:none;
 		}
 		
+		.logo-container{
+			width:100%;
+			display:flex;
+			justify-content:center;
+		}
+		
 		h2{
 			font-size:30px;
 		}
